--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -29,6 +29,10 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
+      # Prepare the enviroment
+      - name: Install dependencies
+        run: sudo apt-get install texlive-xetex
+
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
