--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -8,6 +8,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Latex
         run: sudo apt-get install texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
+      - name: Install latexmk
+        run: sudo apt-get install latexmk
       - name: Compile
         run: make
       - uses: actions/upload-artifact@v3
