--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install Latex
         run: sudo apt-get install texlive-latex-base texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
       - name: Install latexmk
-        run: sudo apt-get install latexmk
+        run: sudo apt-get install latexmk && sudo apt install texlive-xetex
       - name: Compile
         run: make
       - uses: actions/upload-artifact@v3
