--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -10,6 +10,13 @@ jobs:
         run: sudo apt-get install texlive-full texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
       - name: Install latexmk
         run: sudo apt-get install latexmk && sudo apt install texlive-xetex
+      - name: Install Fira Sans
+        run: cd /tmp
+          wget https://github.com/mozilla/Fira/archive/4.202.zip
+          unzip 4.202.zip
+          font_dir="$HOME/Library/Fonts"
+          mkdir -p $font_dir
+          cp Fira-4.202/otf/* $font_dir/
       - name: Compile
         run: make
       - uses: actions/upload-artifact@v3
