Add fonts to github action

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -6,17 +6,22 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
-      - name: Install Latex
-        run: sudo apt-get install texlive-full texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra
-      - name: Install latexmk
-        run: sudo apt-get install latexmk && sudo apt install texlive-xetex
-      - name: Install Fira Sans
+      - name: Install Fira Sans Font
         run: cd /tmp
           wget https://github.com/mozilla/Fira/archive/4.202.zip
           unzip 4.202.zip
           font_dir="$HOME/Library/Fonts"
           mkdir -p $font_dir
           cp Fira-4.202/otf/* $font_dir/
+      - name: Install Libertinus Font
+        run: cd /tmp
+          wget https://github.com/alerque/libertinus/releases/download/v7.040/Libertinus-7.040.zip
+          unzip Libertinus-7.040.zip
+          font_dir="$HOME/Library/Fonts"
+          mkdir -p $font_dir
+          cp Libertinus-7.040/static/OFT/* $font_dir/
+      - name: Install Latex
+        run: sudo apt-get install texlive-full texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra latexmk texlive-xetex
       - name: Compile
         run: make
       - uses: actions/upload-artifact@v3
