--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -7,14 +7,16 @@ jobs:
       - name: Set up Git repository
         uses: actions/checkout@v4
       - name: Install Fira Sans Font
-        run: cd /tmp
+        run: |
+          cd /tmp
           wget https://github.com/mozilla/Fira/archive/4.202.zip
           unzip 4.202.zip
           font_dir="$HOME/Library/Fonts"
           mkdir -p $font_dir
           cp Fira-4.202/otf/* $font_dir/
       - name: Install Libertinus Font
-        run: cd /tmp
+        run: |
+          cd /tmp
           wget https://github.com/alerque/libertinus/releases/download/v7.040/Libertinus-7.040.zip
           unzip Libertinus-7.040.zip
           font_dir="$HOME/Library/Fonts"
