--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -11,7 +11,7 @@ jobs:
           cd /tmp
           wget https://github.com/mozilla/Fira/archive/4.202.zip
           unzip 4.202.zip
-          font_dir="$HOME/Library/Fonts"
+          font_dir="=/usr/share/fonts/opentype/FiraSans"
           mkdir -p $font_dir
           cp Fira-4.202/otf/* $font_dir/
       - name: Install Libertinus Font
@@ -19,9 +19,10 @@ jobs:
           cd /tmp
           wget https://github.com/alerque/libertinus/releases/download/v7.040/Libertinus-7.040.zip
           unzip Libertinus-7.040.zip
-          font_dir="$HOME/Library/Fonts"
+          font_dir="=/usr/share/fonts/opentype/libertinus"
           mkdir -p $font_dir
           cp Libertinus-7.040/static/OTF/* $font_dir/
+          sudo fc-cache -fv
       - name: Install Latex
         run: sudo apt-get install texlive-full texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra latexmk texlive-xetex
       - name: Compile
