--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -6,6 +6,10 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
+      - name: Configure container
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget unzip fontconfig
       - name: Install Fira Sans Font
         run: |
           cd /tmp
@@ -13,7 +17,11 @@ jobs:
           unzip 4.202.zip
           font_dir="=/usr/local/share/fonts/opentype/FiraSans"
           mkdir -p $font_dir
-          cp Fira-4.202/otf/* $font_dir/
+          install -644m Fira-4.202/otf/* $font_dir/
+          wget http://mirrors.ctan.org/fonts/fira/tex/zip/fira.zip
+          unzip fira.zip
+          cp fira/tex/latex/fira/fira.sty .
+          sudo fc-cache -f -v-
       - name: Install Libertinus Font
         run: |
           cd /tmp
@@ -21,8 +29,9 @@ jobs:
           unzip Libertinus-7.040.zip
           font_dir="=/usr/local/share/fonts/opentype/libertinus"
           mkdir -p $font_dir
-          cp Libertinus-7.040/static/OTF/* $font_dir/
-          sudo fc-cache -fv
+          install -644m Libertinus-7.040/static/OTF/*.otf $font_dir/
+          sudo fc-cache -f -v
+
       - name: Install Latex
         run: sudo apt-get install texlive-full texlive-fonts-recommended texlive-fonts-extra texlive-latex-extra latexmk texlive-xetex
       - name: Compile
