--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -17,7 +17,7 @@ jobs:
           unzip 4.202.zip
           font_dir="=/usr/share/fonts/truetype/FiraSans"
           mkdir -p $font_dir
-          install  Fira-4.202/otf/* $font_dir/
+          cp  Fira-4.202/otf/* $font_dir/
           sudo fc-cache -f -v
       - name: Install Libertinus Font
         run: |
@@ -26,7 +26,7 @@ jobs:
           unzip Libertinus-7.040.zip
           font_dir="=/usr/share/fonts/truetype/libertinus"
           mkdir -p $font_dir
-          install Libertinus-7.040/static/OTF/*.otf $font_dir/
+          cp Libertinus-7.040/static/OTF/* $font_dir/
           sudo fc-cache -f -v
 
       - name: Install Latex
