--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -19,6 +19,14 @@ jobs:
           mkdir -p $font_dir
           cp  Fira-4.202/otf/* $font_dir/
           sudo fc-cache -f -v
+      - name: Install Fira Mono Font
+        run: |
+          cd /tmp
+          wget https://www.1001fonts.com/download/font/fira-mono.regular.ttf
+          font_dir="/usr/share/fonts/truetype/FiraMono"
+          mkdir -p $font_dir
+          cp fira-mono.regular.ttf $font_dir/
+          sudo fc-cache -f -v
       - name: Install Libertinus Font
         run: |
           cd /tmp
