--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Configure container
         run: |
           sudo apt-get update
-          sudo apt-get install -y wget unzip fontconfig
+          sudo apt-get install -y wget unzip fontconfig inkscape
       - name: Install Fira Sans Font
         run: |
           cd /tmp
@@ -27,6 +27,15 @@ jobs:
           font_dir="/usr/share/fonts/truetype/fira-code"
           mkdir -p $font_dir
           cp ttf/* $font_dir/
+          sudo fc-cache -f -v
+      - name: Install Stix 2 Math
+        run: |
+          cd /tmp
+          wget https://font.download/dl/font/stix-two-math.zip
+          unzip stix-two-math.zip
+          font_dir="/usr/share/fonts/truetype/stix-two-math"
+          mkdir -p $font_dir
+          cp *.ttf $font_dir/
           sudo fc-cache -f -v
       - name: Install Fira Mono Font
         run: |
