No more pdf files

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,14 @@
 *.cb
 *.cb2
 .*.lb
+*.blg
+*.brf
+*.bbl
+*.nlo
+*.nls
+*.ilg
+*.idx
+*.toc
 
 ## Intermediate documents:
 *.dvi
@@ -22,7 +30,7 @@
 # *.pdf
 
 ## Generated if empty string is given at "Please type another file name for output:"
-.pdf
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
